Fixing spacing issue

--- a/gamers-generation/src/components/Login.scss
+++ b/gamers-generation/src/components/Login.scss
@@ -39,7 +39,7 @@ Button {
 .login-title {
   color: #FFF;
   font-size: 42pt;
-  padding-top: 70px;
+  padding-top: 20px;
   padding-left: 100px;
 }
 
